Edited README via GitHub

--- a/README
+++ b/README
@@ -12,3 +12,5 @@ Instructions:
 
 1. Place hand over button to activate website/program 
 2. hold the R or G button to arrange buttons place on the screen for a more ergonomic setup. 
+
+A Erica Newman, Rebecca Kazansky & WIlliam Jennings project. 
